# repo-history

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: adding-a-method.md
examples/self-analysis/: ARCHITECTURE.md  DECISIONS.md  GUARDRAILS.md  HOTSPOTS.md  LANDMINES.md  README.md  TIMELINE.md
examples/self-analysis/onboarding/: ARCHITECTURE.md  HOTSPOTS.md  TIMELINE.md
src/repo_history/: __init__.py  build.py  cli.py  git.py  github.py  mcp_server.py  memory.py  models.py  security.py  skillfile.py  state.py  work.py
src/repo_history/analysis/: __init__.py  base.py  mechanical.py  util.py
src/repo_history/skill/: SKILL.md
tests/: conftest.py  test_analysis.py  test_build.py  test_git.py  test_github.py  test_memory.py  test_skillfile.py  test_state.py  test_work.py
