[project]
name = "repo-history"
version = "0.1.0"
description = "Git archaeology for AI coding agents: distill a repo's full history into durable engineering memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Harsh Rana", email = "hr23232323@gmail.com" }]
keywords = ["git", "llm", "ai-agents", "code-archaeology", "mcp", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
repo-history = "repo_history.cli:main"
repohist = "repo_history.cli:main"

[project.urls]
Homepage = "https://github.com/hr23232323/repo-history"
Repository = "https://github.com/hr23232323/repo-history"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repo_history"]

[tool.pytest.ini_options]
testpaths = ["tests"]
